--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
-/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    background-color: #584343;
+    background-image: url(weather\ img.jpg);
+    background-attachment: fixed;
     margin: 0;
     padding: 0;
     display: flex;
